--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+spring.datasource.name=calendar_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/calendardb
+spring.datasource.username=admin
+spring.datasource.password=admin
+
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
