Adds request token validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 
 parser.url=${PARSER_URL:http://localhost:9999}
+authenticator.url=${AUTHENTICATOR_URL:http://localhost:9090}
