--- a/.github/workflows/core_be.yml
+++ b/.github/workflows/core_be.yml
@@ -4,6 +4,12 @@ on:
   push:
     tags:
       - 'v*'
+  release:
+    types:
+      - created
+
+env:
+    IMAGE_NAME: calendar-parser-core-be
 
 jobs:
   build-and-push-docker-image:
@@ -30,7 +36,7 @@ jobs:
           context: ./
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
-            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.ref }}
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
