--- a/.github/workflows/core_be.yml
+++ b/.github/workflows/core_be.yml
@@ -19,6 +19,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+
+      - name: Build project with Maven
+        run: mvn clean package -DskipTests
+
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
