--- a/.github/workflows/core_be.yml
+++ b/.github/workflows/core_be.yml
@@ -8,9 +8,6 @@ on:
     types:
       - created
 
-env:
-  IMAGE_NAME: calendar-parser-core-be
-
 jobs:
   build-and-push-docker-image:
     name: Build Docker image and push to repositories
@@ -38,15 +35,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - id: string
-        uses: ASzc/change-string-case-action@v2
-        with:
-          string: ${{ github.repository_owner }}
-
       - name: Build image and push to Docker Hub and GitHub Container Registry
         uses: docker/build-push-action@v2
         with:
           context: ./
           tags: |
-            ghcr.io/${{ steps.string.outputs.lowercase }}/${{ env.IMAGE_NAME }}:latest
-            ghcr.io/${{ steps.string.outputs.lowercase }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+            ghcr.io/bitbyebit/calendar-parser-core-be:latest
+            ghcr.io/bitbyebit/calendar-parser-core-be:${{ github.ref_name }}
