Enables building docker image from amd64 and arm64 architectures

--- a/.github/workflows/core_be.yml
+++ b/.github/workflows/core_be.yml
@@ -39,7 +39,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./
+          platforms: linux/amd64,linux/arm64
+          push: true
           tags: |
             ghcr.io/bitbyebit/calendar-parser-core-be:latest
             ghcr.io/bitbyebit/calendar-parser-core-be:${{ github.ref_name }}
-          push: true
