--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialec
 
 parser.url=${PARSER_URL:http://localhost:9999}
 authenticator.url=${AUTHENTICATOR_URL:http://localhost:9090}
+
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include= health, prometheus, metrics
+management.endpoints.web.base-path=/actuator
+management.endpoint.health.show-details=always
+
